# rogallo

./: .codespellrc  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  ChangeLog.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
changelog/: index.html
configuration/: index.html
docs/examples/: features.gmi  links.gmi  lots_of_links.gmi  mandelbrot.gmi  much_emoji.gmi  much_text.gmi  preformat.gmi
docs/screenshots/: ansi_screenshot.py  emoji_screenshot.py  links_screenshot.py  main_screenshot.py  max_width_off_screenshot.py  max_width_on_screenshot.py  preformat_screenshot.py  stripes_screenshot.py
docs/screenshots/support/: __init__.py  maker.py
docs/source/: CNAME  configuration.md  index.md  license.md
license/: index.html
search/: search_index.json
src/rogallo/: __init__.py  __main__.py  cache.py  document.py  input_content.py  preflight.py  rogallo.py  safe_escape.py  types.py
src/rogallo/app/: __init__.py  preflight.py  rogallo.py
src/rogallo/app/commands/: __init__.py  main.py
src/rogallo/app/data/: __init__.py  command_history.py  config.py  location_history.py  navigation_history.py
src/rogallo/app/messages/: __init__.py  opening.py
src/rogallo/app/providers/: main.py
src/rogallo/app/screens/: main.py
src/rogallo/app/widgets/: __init__.py  history.py  viewer.py
src/rogallo/app/widgets/command_line/: base_command.py  general.py  open_gemini_uri.py  open_other_uri.py  widget.py
src/rogallo/app/widgets/viewer/: __init__.py  document_view.py  gemtext_blocks.py  status.py  title.py  widget.py
src/rogallo/commands/: __init__.py  clipboard.py  main.py  navigation.py  search.py
src/rogallo/data/: __init__.py  bookmarks.py  client_certificates.py  command_history.py  config.py  location_history.py  locations.py  navigation_history.py  trust.py  trusted_mime_types.py  trusted_schemes.py
src/rogallo/gemtext/: __init__.py  parser.py
src/rogallo/history/: __init__.py  navigable.py  recency.py  simple.py
src/rogallo/messages/: __init__.py  clipboard.py  opening.py
src/rogallo/providers/: __init__.py  bookmarks.py  history.py  main.py
src/rogallo/screens/: certificate.py  confirm_unsupported.py  confirm_unsupported_uri.py  main.py  user_input.py
src/rogallo/widgets/: __init__.py  bookmarks.py  history.py
src/rogallo/widgets/command_line/: __init__.py  base_command.py  finger.py  general.py  open_directory.py  open_file.py  open_gemini_uri.py  palette_commands.py  widget.py
src/rogallo/widgets/viewer/: content_filter.py  document_view.py  gemtext_blocks.py  status.py  title.py  widget.py
src/rogallo/widgets/viewer/gemtext/: __init__.py  content_filter.py  icons.py  link.py  list_item.py  preformatted.py  text.py
tests/unit/: test_gemtext.py  test_navigable_history.py  test_preflight.py  test_recency_history.py
