[project]
name = "rogallo"
version = "0.0.1"
description = "Coming soon"
readme = "README.md"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.7",
    "textual-enhanced>=1.5.0",
    "wasat>=0.0.1",
    "xdg-base-dirs>=6.0.2",
]

[project.scripts]
rogallo = "rogallo.__main__:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # I think try...except...pass reads far better.
    "SIM105",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
    "textual-dev>=1.8.0",
]
