[project]
name = "rogallo"
version = "0.2.0"
description = "A terminal-based client for the Gemini Protocol"
readme = "README.md"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
requires-python = ">=3.12"
dependencies = [
    "bagofstuff>=1.0.0",
    "gemtext>=0.1.0",
    "textual>=8.2.7",
    "textual-enhanced>=1.5.0",
    "wasat>=0.1.0",
    "xdg-base-dirs>=6.0.2",
]

keywords = [
    "API",
    "Gemini",
    "Gemtext",
    "Markup",
    "Hypertext",
    "Browser",
    "Client",
    "TUI",
    "Terminal",
    "Textual",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://rogallo.davep.dev/"
Repository = "https://github.com/davep/rogallo"
Documentation = "https://rogallo.davep.dev/"
Source = "https://github.com/davep/rogallo"
Issues = "https://github.com/davep/rogallo/issues"
Discussions = "https://github.com/davep/rogallo/discussions"

[project.scripts]
rogallo = "rogallo.__main__:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # I think try...except...pass reads far better.
    "SIM105",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "coverage>=7.14.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "textual-dev>=1.8.0",
]

[tool.coverage.run]
include = [
    "src/rogallo/preflight.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
