[project]
name = "rogallo"
version = "0.8.0"
description = "A terminal-based client for the Gemini Protocol"
readme = "README.md"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
keywords = [
    "API",
    "Gemini",
    "Gemtext",
    "Markup",
    "Hypertext",
    "Browser",
    "Client",
    "TUI",
    "Terminal",
    "Textual",
]
dependencies = [
    "bagofstuff>=1.2.0",
    "gemtext>=1.0.0",
    "pyperclip>=1.11.0",
    "textual>=8.2.7",
    "textual-enhanced>=1.6.0",
    "types-pygments>=2.20.0.20260518",
    "types-pyperclip>=1.11.0.20260508",
    "wasat>=0.7.0",
    "xdg-base-dirs>=6.0.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Terminals",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://rogallo.davep.dev/"
Repository = "https://github.com/davep/rogallo"
Documentation = "https://rogallo.davep.dev/"
Source = "https://github.com/davep/rogallo"
Issues = "https://github.com/davep/rogallo/issues"
Discussions = "https://github.com/davep/rogallo/discussions"

[project.scripts]
rogallo = "rogallo.__main__:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # I think try...except...pass reads far better.
    "SIM105",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "coverage>=7.14.1",
    "markdown-exec>=1.12.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "textual-dev>=1.8.0",
]

[tool.coverage.run]
include = [
    "src/rogallo/preflight.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
